test/compiler/fail/invalidprint.bt
Struct sth {
    int a;
    string b;
    int c;
}
Struct sth s;

print(s);